--- a/03. Partie réglementaire - Décrets simples/Article D16-1 - 23383582.md
+++ b/03. Partie réglementaire - Décrets simples/Article D16-1 - 23383582.md
@@ -1,11 +1,10 @@
 # Article D16-1
 
-I. ― L'âge d'ouverture du droit à une pension de retraite est abaissé à soixante ans, en application de l'article L. 25 bis,
+I. – L'âge d'ouverture du droit à une pension de retraite est abaissé à soixante ans, en application de l'article L. 25 bis,
 pour les fonctionnaires ayant débuté leur activité avant l'âge de vingt ans et qui justifient, dans le régime des pensions
 civiles et militaires de retraite et, le cas échéant, dans un ou plusieurs autres régimes obligatoires, d'une durée
-d'assurance ayant donné lieu à cotisations à leur charge au moins égale à la durée d'assurance ou de services et de
-bonifications définie à l'article 5 de la loi n° 2003-775 du 21 août 2003portant réforme des retraites et applicable l'année
-où ils atteignent l'âge de soixante ans. 
+d'assurance ayant donné lieu à cotisations à leur charge au moins égale à la durée d'assurance définie à l'article L. 14 et
+applicable l'année où ils atteignent l'âge de soixante ans. 
 
 II. ― L'âge d'ouverture du droit à une pension de retraite est abaissé, en application de l'article L. 25 bis, pour les
 assurés qui justifient, dans le régime des pensions civiles et militaires de retraite et, le cas échéant, dans un ou
@@ -15,140 +14,123 @@ aux seuils définis ci-après :
 A. ― Pour les fonctionnaires nés avant le 1er juillet 1951 : 
 
 1° A cinquante-six ans pour les fonctionnaires justifiant d'une durée d'assurance ayant donné lieu à cotisations à leur
-charge au moins égale à la durée d'assurance ou de services et bonifications définie à l'article 5 de la loi n° 2003-775 du
-21 août 2003 portant réforme des retraites et applicable l'année où l'assuré atteint l'âge de soixante ans, majorée de huit
-trimestres, et ayant débuté leur activité avant l'âge de seize ans ; 
+charge au moins égale à la durée d'assurance définie à l'article L. 14 et applicable l'année où l'assuré atteint l'âge de
+soixante ans, majorée de huit trimestres, et ayant débuté leur activité avant l'âge de seize ans ; 
 
 2° A cinquante-huit ans pour les fonctionnaires justifiant d'une durée d'assurance ayant donné lieu à cotisations à leur
-charge au moins égale à la durée d'assurance ou de services et bonifications définie à l'article 5 de la loi du 21 août 2003
-précitée et applicable l'année où l'assuré atteint l'âge de soixante ans, majorée de quatre trimestres, et ayant débuté leur
-activité avant l'âge de seize ans ; 
+charge au moins égale à la durée d'assurance définie à l'article L. 14 et applicable l'année où l'assuré atteint l'âge de
+soixante ans, majorée de quatre trimestres, et ayant débuté leur activité avant l'âge de seize ans ; 
 
 3° A cinquante-neuf ans pour les fonctionnaires justifiant d'une durée d'assurance ayant donné lieu à cotisations à leur
-charge au moins égale à la durée d'assurance ou de services et bonifications définie à l'article 5 de la loi du 21 août 2003
-précitée et applicable l'année où l'assuré atteint l'âge de soixante ans et ayant débuté leur activité avant l'âge de dix-
-sept ans ; 
+charge au moins égale à la durée d'assurance définie à l'article L. 14 et applicable l'année où l'assuré atteint l'âge de
+soixante ans et ayant débuté leur activité avant l'âge de dix-sept ans ; 
 
 B. ― Pour les fonctionnaires nés entre le 1er juillet 1951 inclus et le 31 décembre 1951 inclus : 
 
 1° A cinquante-six ans pour les fonctionnaires justifiant d'une durée d'assurance ayant donné lieu à cotisations à leur
-charge au moins égale à la durée d'assurance ou de services et bonifications définie à l'article 5 de la loi du 21 août 2003
-précitée et applicable l'année où l'assuré atteint l'âge de soixante ans, majorée de huit trimestres, et ayant débuté leur
-activité avant l'âge de seize ans ; 
+charge au moins égale à la durée d'assurance définie à l'article L. 14 et applicable l'année où l'assuré atteint l'âge de
+soixante ans, majorée de huit trimestres, et ayant débuté leur activité avant l'âge de seize ans ; 
 
 2° A cinquante-huit ans pour les fonctionnaires justifiant d'une durée d'assurance ayant donné lieu à cotisations à leur
-charge au moins égale à la durée d'assurance ou de services et bonifications définie à l'article 5 de la loi du 21 août 2003
-précitée et applicable l'année où l'assuré atteint l'âge de soixante ans, majorée de quatre trimestres, et ayant débuté leur
-activité avant l'âge de seize ans ; 
+charge au moins égale à la durée d'assurance définie à l'article L. 14 et applicable l'année où l'assuré atteint l'âge de
+soixante ans, majorée de quatre trimestres, et ayant débuté leur activité avant l'âge de seize ans ; 
 
 3° A cinquante-neuf ans pour les fonctionnaires justifiant d'une durée d'assurance ayant donné lieu à cotisations à leur
-charge au moins égale à la durée d'assurance ou de services et bonifications définie à l'article 5 de la loi du 21 août 2003
-précitée et applicable l'année où l'assuré atteint l'âge de soixante ans et ayant débuté leur activité avant l'âge de dix-
-sept ans. 
+charge au moins égale à la durée d'assurance définie à l'article L. 14 et applicable l'année où l'assuré atteint l'âge de
+soixante ans et ayant débuté leur activité avant l'âge de dix-sept ans. 
 
 C. ― Pour les fonctionnaires nés en 1952 : 
 
 1° A cinquante-six ans pour les fonctionnaires justifiant d'une durée d'assurance ayant donné lieu à cotisations à leur
-charge au moins égale à la durée d'assurance ou de services et bonifications définie à l'article 5 de la loi du 21 août 2003
-précitée et applicable l'année où l'assuré atteint l'âge de soixante ans, majorée de huit trimestres, et ayant débuté leur
-activité avant l'âge de seize ans ; 
+charge au moins égale à la durée d'assurance définie à l'article L. 14 et applicable l'année où l'assuré atteint l'âge de
+soixante ans, majorée de huit trimestres, et ayant débuté leur activité avant l'âge de seize ans ; 
 
 2° A cinquante-huit ans pour les fonctionnaires justifiant d'une durée d'assurance ayant donné lieu à cotisations à leur
-charge au moins égale à la durée d'assurance ou de services et bonifications définie à l'article 5 de la loi du 21 août 2003
-précitée et applicable l'année où l'assuré atteint l'âge de soixante ans, majorée de quatre trimestres, et ayant débuté leur
-activité avant l'âge de seize ans ; 
+charge au moins égale à la durée d'assurance définie à l'article L. 14 et applicable l'année où l'assuré atteint l'âge de
+soixante ans, majorée de quatre trimestres, et ayant débuté leur activité avant l'âge de seize ans ; 
 
 3° A cinquante-neuf ans et quatre mois pour les fonctionnaires justifiant d'une durée d'assurance cotisée au moins égale à la
-durée d'assurance ou de services et bonifications définie à l'article 5 de la loi n° 2003-775 du 21 août 2003 portant réforme
-des retraites et applicable l'année où l'assuré atteint l'âge de soixante ans et ayant débuté leur activité avant l'âge de
-dix-sept ans. 
+durée d'assurance définie à l'article L. 14 et applicable l'année où l'assuré atteint l'âge de soixante ans et ayant débuté
+leur activité avant l'âge de dix-sept ans. 
 
 D. ― Pour les fonctionnaires nés en 1953 : 
 
 1° A cinquante-six ans pour les fonctionnaires justifiant d'une durée d'assurance cotisée au moins égale à la durée
-d'assurance ou de services et bonifications définie à l'article 5 de la loi du 21 août 2003 précitée et applicable l'année où
-l'assuré atteint l'âge de soixante ans, majorée de huit trimestres, et ayant débuté leur activité avant l'âge de seize ans ; 
+d'assurance définie à l'article L. 14 et applicable l'année où l'assuré atteint l'âge de soixante ans, majorée de huit
+trimestres, et ayant débuté leur activité avant l'âge de seize ans ; 
 
 2° A cinquante-huit ans et quatre mois pour les fonctionnaires justifiant d'une durée d'assurance cotisée au moins égale à la
-durée d'assurance ou de services et bonifications définie à l'article 5 de la loi du 21 août 2003 précitée et applicable
-l'année où l'assuré atteint l'âge de soixante ans, majorée de quatre trimestres, et ayant débuté leur activité avant l'âge de
-seize ans ; 
+durée d'assurance définie à l'article L. 14 et applicable l'année où l'assuré atteint l'âge de soixante ans, majorée de
+quatre trimestres, et ayant débuté leur activité avant l'âge de seize ans ; 
 
 3° A cinquante-neuf ans et huit mois pour les fonctionnaires justifiant d'une durée d'assurance cotisée au moins égale à la
-durée d'assurance ou de services et bonifications définie à l'article 5 de la loi du 21 août 2003 précitée et applicable
-l'année où l'assuré atteint l'âge de soixante ans et ayant débuté leur activité avant l'âge de dix-sept ans ; 
+durée d'assurance définie à l'article L. 14 et applicable l'année où l'assuré atteint l'âge de soixante ans et ayant débuté
+leur activité avant l'âge de dix-sept ans ; 
 
 E. ― Pour les fonctionnaires nés en 1954 : 
 
 1° A cinquante-six ans pour les fonctionnaires justifiant d'une durée d'assurance cotisée au moins égale à la durée
-d'assurance ou de services et bonifications définie à l'article 5 de la loi du 21 août 2003 précitée et applicable l'année où
-l'assuré atteint l'âge de soixante ans, majorée de huit trimestres, et ayant débuté leur activité avant l'âge de seize ans ; 
+d'assurance définie à l'article L. 14 et applicable l'année où l'assuré atteint l'âge de soixante ans, majorée de huit
+trimestres, et ayant débuté leur activité avant l'âge de seize ans ; 
 
 2° A cinquante-huit ans et huit mois pour les fonctionnaires justifiant d'une durée d'assurance cotisée au moins égale à la
-durée d'assurance ou de services et bonifications définie à l'article 5 de la loi du 21 août 2003 précitée et applicable
-l'année où l'assuré atteint l'âge de soixante ans, majorée de quatre trimestres, et ayant débuté leur activité avant l'âge de
-seize ans ; 
+durée d'assurance définie à l'article L. 14 et applicable l'année où l'assuré atteint l'âge de soixante ans, majorée de
+quatre trimestres, et ayant débuté leur activité avant l'âge de seize ans ; 
 
 F. ― Pour les fonctionnaires nés en 1955 : 
 
 1° A cinquante-six ans et quatre mois pour les fonctionnaires justifiant d'une durée d'assurance cotisée au moins égale à la
-durée d'assurance ou de services et bonifications définie à l'article 5 de la loi du 21 août 2003 précitée et applicable
-l'année où l'assuré atteint l'âge de soixante ans, majorée de huit trimestres, et ayant débuté leur activité avant l'âge de
-seize ans ; 
+durée d'assurance définie à l'article L. 14 et applicable l'année où l'assuré atteint l'âge de soixante ans, majorée de huit
+trimestres, et ayant débuté leur activité avant l'âge de seize ans ; 
 
 2° A cinquante-neuf ans pour les fonctionnaires justifiant d'une durée d'assurance cotisée au moins égale à la durée
-d'assurance ou de services et bonifications définie à l'article 5 de la loi du 21 août 2003 précitée et applicable l'année où
-l'assuré atteint l'âge de soixante ans, majorée de quatre trimestres, et ayant débuté leur activité avant l'âge de seize
-ans ; 
+d'assurance définie à l'article L. 14 et applicable l'année où l'assuré atteint l'âge de soixante ans, majorée de quatre
+trimestres, et ayant débuté leur activité avant l'âge de seize ans ; 
 
 G. ― Pour les fonctionnaires nés en 1956 : 
 
 1° A cinquante-six ans et huit mois pour les fonctionnaires justifiant d'une durée d'assurance cotisée au moins égale à la
-durée d'assurance ou de services et bonifications définie à l'article 5 de la loi du 21 août 2003 précitée et applicable
-l'année où l'assuré atteint l'âge de soixante ans, majorée de huit trimestres, et ayant débuté leur activité avant l'âge de
-seize ans ; 
+durée d'assurance définie à l'article L. 14 et applicable l'année où l'assuré atteint l'âge de soixante ans, majorée de huit
+trimestres, et ayant débuté leur activité avant l'âge de seize ans ; 
 
 2° A cinquante-neuf ans et quatre mois pour les fonctionnaires justifiant d'une durée d'assurance cotisée au moins égale à la
-durée d'assurance ou de services et bonifications définie à l'article 5 de la loi du 21 août 2003 précitée et applicable
-l'année où l'assuré atteint l'âge de soixante ans, majorée de quatre trimestres, et ayant débuté leur activité avant l'âge de
-seize ans ; 
+durée d'assurance définie à l'article L. 14 et applicable l'année où l'assuré atteint l'âge de soixante ans, majorée de
+quatre trimestres, et ayant débuté leur activité avant l'âge de seize ans ; 
 
 H. ― Pour les fonctionnaires nés en 1957 : 
 
 1° A cinquante-sept ans pour les fonctionnaires justifiant d'une durée d'assurance cotisée au moins égale à la durée
-d'assurance ou de services et bonifications définie à l'article 5 de la loi du 21 août 2003 précitée et applicable l'année où
-l'assuré atteint l'âge de soixante ans, majorée de huit trimestres, et ayant débuté leur activité avant l'âge de seize ans ; 
+d'assurance définie à l'article L. 14 et applicable l'année où l'assuré atteint l'âge de soixante ans, majorée de huit
+trimestres, et ayant débuté leur activité avant l'âge de seize ans ; 
 
 2° A cinquante-neuf ans et huit mois pour les fonctionnaires justifiant d'une durée d'assurance cotisée au moins égale à la
-durée d'assurance ou de services et bonifications définie à l'article 5 de la loi du 21 août 2003 précitée et applicable
-l'année où l'assuré atteint l'âge de soixante ans et ayant débuté leur activité avant l'âge de seize ans ; 
+durée d'assurance définie à l'article L. 14 et applicable l'année où l'assuré atteint l'âge de soixante ans et ayant débuté
+leur activité avant l'âge de seize ans ; 
 
 I. ― Pour les fonctionnaires nés en 1958 : 
 
 A cinquante-sept ans et quatre mois pour les fonctionnaires justifiant d'une durée d'assurance cotisée au moins égale à la
-durée d'assurance ou de services et bonifications définie à l'article 5 de la loi du 21 août 2003 précitée et applicable
-l'année où l'assuré atteint l'âge de soixante ans, majorée de huit trimestres, et ayant débuté leur activité avant l'âge de
-seize ans ; 
+durée d'assurance définie à l'article L. 14 et applicable l'année où l'assuré atteint l'âge de soixante ans, majorée de huit
+trimestres, et ayant débuté leur activité avant l'âge de seize ans ; 
 
 J. ― Pour les fonctionnaires nés en 1959 : 
 
 A cinquante-sept ans et huit mois pour les fonctionnaires justifiant d'une durée d'assurance cotisée au moins égale à la
-durée d'assurance ou de services et bonifications définie à l'article 5 de la loi du 21 août 2003 précitée et applicable
-l'année où l'assuré atteint l'âge de soixante ans, majorée de huit trimestres, et ayant débuté leur activité avant l'âge de
-seize ans ; 
+durée d'assurance définie à l'article L. 14 et applicable l'année où l'assuré atteint l'âge de soixante ans, majorée de huit
+trimestres, et ayant débuté leur activité avant l'âge de seize ans ; 
 
 K. ― Pour les fonctionnaires nés à compter du 1er janvier 1960 : 
 
 A cinquante-huit ans pour les fonctionnaires justifiant d'une durée d'assurance cotisée au moins égale à la durée d'assurance
-ou de services et bonifications définie à l'article 5 de la loi du 21 août 2003 précitée et applicable l'année où l'assuré
-atteint l'âge de soixante ans, majorée de huit trimestres, et ayant débuté leur activité avant l'âge de seize ans.
+définie à l'article L. 14 et applicable l'année où l'assuré atteint l'âge de soixante ans, majorée de huit trimestres, et
+ayant débuté leur activité avant l'âge de seize ans.
+
+**Nota:**
+
+Décret n° 2014-350 du 19 mars 2014 article 5 : Les présentes dispositions sont applicables aux pensions prenant effet à
+compter du 1er avril 2014.
 
 **Liens relatifs à cet article**
-
-_Cite_:
-
-  - Loi n°2003-775 du 21 août 2003 - art. 5
-  - Code des pensions civiles et militaires de retraite - art. L25 bis
 
 _Cité par_:
 
@@ -160,4 +142,9 @@ _Cité par_:
 
 _Modifié par_:
 
-  - Décret n°2012-847 du 2 juillet 2012 - art. 4
+  - Décret n°2014-350 du 19 mars 2014 - art. 2
+
+_Cite_:
+
+  - Code des pensions civiles et militaires de retr... - art. L14 (V)
+  - Code des pensions civiles et militaires de retraite - art. L25 bis
